# -CPP2024-Lab2

./: .gitignore  CMakeLists.txt  ComplexNumber.h  DataStructures.cpp  DataStructures.h  EquationProcessor.cpp  EquationProcessor.h  FileReader.h  FileWriter.cpp  GenerateHTML.cpp  Solution.cpp  Solution.h  Sorting.cpp  Sorting.h  Source.cpp  StudentRating.cpp  StudentRating.h  equations.txt  ex.txt  input.cpp  result.txt
Components/: ComplexNumber.cpp  StudentRating.cpp
examples/: output1.html  output2.html
include/: EquationProcessor.h  FileWriter.h  GenerateHTML.h  StudentRating.h
utilite/: FileReader.cpp
